// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions Updater Transactions Updater: handles duplicate inserts/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "id2": "1",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "1",
    },
  ],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 1,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
  ],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "[]",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "id": "1",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "output_transaction_id": "1",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD$1$INPUT",
      "input_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "input_transaction_id": "1",
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Transactions Updater Transactions Updater: handles insert/save 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "id2": "1",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "1",
    },
  ],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 1,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
  ],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "[]",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "id": "1",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "output_transaction_id": "1",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD$1$INPUT",
      "input_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "input_transaction_id": "1",
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Transactions Updater Transactions Updater: handles reverting inputs/saves 1`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "id2": "1",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "1",
    },
  ],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 1,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
  ],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "[]",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "id": "1",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "output_transaction_id": "1",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD$1$INPUT",
      "input_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "input_transaction_id": "1",
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Transactions Updater Transactions Updater: handles reverting inputs/saves 2`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 2,
      "block_id": 2,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacBBB",
      "last_transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "last_transaction_id": "2",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "transaction_id": "2",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 2,
      "block_id": 2,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacOOO",
      "last_transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "last_transaction_id": "2",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "transaction_id": "2",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacBBB",
      "id2": "2",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacOOO",
      "id2": "2",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "1",
    },
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "2",
    },
  ],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacOOO",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 2,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacOOO$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 1,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
  ],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "[]",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "id": "1",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
    Object {
      "attributes_raw": "[]",
      "block_id": 2,
      "block_time": 15,
      "gas": null,
      "hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "id": "2",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "output_transaction_id": "1",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD$1$INPUT",
      "input_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "input_transaction_id": "1",
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacOOO",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 2,
      "output_transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "output_transaction_id": "2",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacBBB",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0RRR$4$INPUT",
      "input_transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0HHH",
      "input_transaction_id": "2",
      "output_block_id": 2,
      "output_transaction_hash": "HHHH028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0RRR",
      "output_transaction_id": "2",
      "output_transaction_index": 4,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
  ],
  "transfer": Array [],
}
`;

exports[`Transactions Updater Transactions Updater: handles reverting inputs/saves 3`] = `
Object {
  "action": Array [],
  "address": Array [
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
    Object {
      "aggregate_block_id": 1,
      "block_id": 1,
      "block_time": 15,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "last_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "last_transaction_id": "1",
      "last_transaction_time": 15,
      "transaction_count": "1",
      "transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "transaction_id": "1",
      "transfer_count": "0",
    },
  ],
  "addressToTransaction": Array [
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "id2": "1",
    },
    Object {
      "id1": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "id2": "1",
    },
  ],
  "addressToTransfer": Array [],
  "asset": Array [],
  "assetToTransaction": Array [
    Object {
      "id1": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "id2": "1",
    },
  ],
  "block": Array [
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 1,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
    Object {
      "aggregated_system_fee": "0.00000000",
      "hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cddb7525ab83ae167ff7703941",
      "id": 2,
      "invocation_script": "0xecc6b20d3ccac1ee9ef109af5a7cdb85706b1df9",
      "merkle_root": "7f48028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e045c",
      "network_fee": "0.00000000",
      "next_block_hash": null,
      "next_block_id": null,
      "next_validator_address_id": "APyEx5f4Zm4oCHwFWWVVVVVVVVVxVGTyVR",
      "nonce": "testtesttesttest",
      "previous_block_hash": "6d5382f73b890eed53d6c9ba45584f22d8ebb2cdd0f96kDFwofgiaspdfasfd23",
      "previous_block_id": 0,
      "size": 20,
      "system_fee": "0.00000000",
      "time": 15,
      "transaction_count": 1,
      "validator_address_id": null,
      "verification_script": "0xecc6dot9h0vac1ee9ef109af5a7cdb85706b1g6y",
      "version": 0,
    },
  ],
  "coin": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "block_id": 1,
      "id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX$g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "value": "6",
    },
  ],
  "contract": Array [],
  "dataPoint": Array [],
  "migration": Array [],
  "processedIndex": Array [],
  "transaction": Array [
    Object {
      "attributes_raw": "[]",
      "block_id": 1,
      "block_time": 15,
      "gas": null,
      "hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "id": "1",
      "index": 0,
      "network_fee": "0.00000000",
      "nonce": null,
      "pubkey": null,
      "result_raw": null,
      "script": null,
      "scripts_raw": "[]",
      "size": 10,
      "system_fee": "0.00000000",
      "type": "ContractTransaction",
      "version": 0,
    },
  ],
  "transactionInputOutput": Array [
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacXXX",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": null,
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC$0$INPUT",
      "input_transaction_hash": null,
      "input_transaction_id": null,
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "output_transaction_id": "1",
      "output_transaction_index": 0,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
    Object {
      "address_id": "XXXEx5f4Zm4oCHwFWiSTaph1fPBxZacAAA",
      "asset_id": "g95k2ovja9toglc9e42c8eb9tghid43ew3ry804eaf1a0b4kfob049OOOOOOOOO",
      "claim_transaction_hash": null,
      "claim_transaction_id": null,
      "claim_value": "0",
      "id": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD$1$INPUT",
      "input_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0CCC",
      "input_transaction_id": "1",
      "output_block_id": 1,
      "output_transaction_hash": "AAAA028c38117ac9e42c8e1f6f06ae027cdbb904eaf1a0bdc30c9d81694e0DDD",
      "output_transaction_id": "1",
      "output_transaction_index": 1,
      "subtype": "NONE",
      "type": "INPUT",
      "value": "6",
    },
  ],
  "transfer": Array [],
}
`;
